--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         }, {}, ["loader"]);
     </script>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>MyTicket - Ticket/Event Management System WordPress Theme Preview - ThemeForest</title>
+    <title>TariNika - our best online ticketing</title>
     <meta name="description" content="&amp;lt;h2 id=&amp;quot;item-description__myticket-create-events-sell-tickets-validate-with-qr-code-mobil...">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
@@ -595,7 +595,7 @@
 </head>
 
 <body class="full-screen-preview">
-    <div class="preview__header" data-view="ctaHeader" data-item-id="20099805">
+    <!-- <div class="preview__header" data-view="ctaHeader" data-item-id="20099805">
         <div class="preview__envato-logo">
             <a class="header-envato_market" href="https://themeforest.net/item/myticket-ticketevent-management-system-wordpress-theme/20099805">Envato Market</a>
         </div>
@@ -609,9 +609,9 @@
                 <a class="header-remove-frame" href="https://myticket.kenzap.com/">
                     <i class="e-icon -icon-cancel"></i><span>Remove Frame</span>
                 </a>
-            </div>
+            </div> 
         </div>
-    </div>
+    </div> -->
     <iframe class="full-screen-preview__frame" src="https://myticket.kenzap.com/" name="preview-frame" frameborder="0" noresize="noresize" data-view="fullScreenPreview" allow="geolocation 'self'; autoplay 'self'" style="height: 555px;">
     </iframe>
 
