--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="nav-link" href="#">Daftar</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-danger" href="#">Login</a>
+        <a class="btn btn-danger" href="/login.html">Login</a>
       </li>
     </ul>
   </nav>
