--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
+    <!--CSS STYLE-->
+    <link href="css/styles.css" rel="stylesheet"/>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
@@ -33,10 +35,11 @@
             color: white;
             padding: 14px 20px;
             margin: 8px 0;
-            border: 2px solid #DDDDDD;
+            border: 0px solid #DDDDDD;
             border-radius: 20px;
             cursor: pointer;
             width: 40%;
+            font-family: 'Poppins', sans-serif !important;
         }
         
         button:hover {
@@ -91,7 +94,7 @@
                     <div class="imgcontainer">
                         <br>
                         <!-- <img src="img_avatar2.png" alt="Avatar" class="avatar"> -->
-                        <h2>Masuk ke akun</h2>
+                        <h2 id="red">Masuk ke akun</h2>
                         <br>
                     </div>
 
@@ -105,9 +108,9 @@
                         <br>
                         <br>
                         <br>
-                        <button type="submit">Masuk</button>
+                        <button type="submit" class="btn btn-danger">Masuk</button>
                         <br>
-                        <button type="button" style="  background-color: white; color: #FF473E; padding: 14px 20px; margin: 8px 0; cursor: pointer; width: 40%; border: 2px solid #DDDDDD; border-radius: 20px;">Daftar</button>
+                        <button type="button" class="btn btn-danger" style="  background-color: white; color: #FF473E; padding: 14px 20px; margin: 8px 0; cursor: pointer; width: 40%; border-radius: 20px;">Daftar</button>
                         <br>
                     </div>
                 </form>
