--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
         }
         
         form {
@@ -84,13 +85,11 @@
     </style>
 </head>
 
-<body>
+<body class="text-center">
     <div class="container">
-        <class class="row">
-
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-                <form action="/action_page.php" method="post">
+        <div class="row">
+            <div class="col-sm-5">
+                <form class="form-signin" action="/action_page.php" method="post">
                     <div class="imgcontainer">
                         <br>
                         <!-- <img src="img_avatar2.png" alt="Avatar" class="avatar"> -->
@@ -115,9 +114,7 @@
                     </div>
                 </form>
             </div>
-            <div class="col-sm-4"></div>
-        </class>
-    </div>
+        </div>
     </div>
 </body>
 
