--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Poppins', sans-serif !important;
             text-align: center;
         }
         
@@ -19,7 +19,6 @@
             width: 50%;
             text-align: center;
             border-radius: 20px;
-            position: absolute;
         }
         
         input[type=text],
