--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
     <!--CSS STYLE-->
     <link href="css/styles.css" rel="stylesheet" />
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
+
+        body{
             text-align: center;
         }
         
@@ -86,7 +86,7 @@
     </style>
 </head>
 
-<body class="text-center">
+<body style="text-align: center;">
     <div class="container">
         <div class="row">
             <div class="col-sm-5">
@@ -99,7 +99,7 @@
                         <br>
                     </div>
 
-                    <div class="container" style="text-align: center;">
+                    <div class="container">
                         <!-- <label for="uname"><b>email</b></label> -->
                         <input type="text" style="width : 80%; border-radius: 20px;" placeholder="email" name="email" required>
 
