--- a/login.html
+++ b/login.html
@@ -12,13 +12,15 @@
         body {
             font-family: 'Poppins', sans-serif !important;
             text-align: center;
+            background-image: url("img/login-bg.png");
         }
         
         form {
-            border: 2px solid #f1f1f1;
+            border: 3px solid #f1f1f1;
             width: 50%;
             text-align: center;
             border-radius: 20px;
+            background-color: white;
         }
         
         input[type=text],
@@ -85,7 +87,7 @@
     </style>
 </head>
 
-<body class="text-center">
+<body class="text-center" style="margin-top: 120px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-5">
