--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
     </style>
 </head>
 
-<body class="text-center" style="margin-top: 120px; text-align: center;">
+<body class="text-center" style="margin-top: 120px;">
     <div class="container">
         <div class="row">
             <div class="col-sm-5">
