--- a/login.html
+++ b/login.html
@@ -15,9 +15,9 @@
         }
         
         form {
+            text-align: center;
             border: 3px solid #f1f1f1;
             width: 50%;
-            text-align: center;
             border-radius: 20px;
             background-color: white;
         }
@@ -118,6 +118,7 @@
                 </form>
             </div>
         </div>
+    </div>
     </div>
 </body>
 
