--- a/login.html
+++ b/login.html
@@ -11,15 +11,14 @@
     <style>
         body {
             background-image: url("img/login-bg.png");
-            text-align: center;
         }
         
         form {
             border: 3px solid #f1f1f1;
-            width: 50%;
             border-radius: 20px;
-            /*background-color: white;
-             text-align: center; */
+            background-color: white;
+            text-align: center;
+            width: 50%;
         }
         
         input[type=text],
@@ -86,7 +85,7 @@
     </style>
 </head>
 
-<body class="text-center" style="margin-top: 120px;">
+<body class="text-center" style="margin-top: 120px; text-align: center;">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
