udah bisa tengahhh

--- a/login.html
+++ b/login.html
@@ -18,7 +18,8 @@
             border-radius: 20px;
             background-color: white;
             text-align: center;
-            width: 50%;
+            width: 40%;
+            margin-left: 30%;
         }
         
         input[type=text],
@@ -85,7 +86,7 @@
     </style>
 </head>
 
-<body class="text-center" style="margin-top: 120px; text-align: center;">
+<body class="text-center" style="margin-top: 140px; text-align: center;">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
