--- a/login.html
+++ b/login.html
@@ -8,9 +8,17 @@
     <title>Login Form</title>
     <!--CSS STYLE-->
     <link href="css/styles.css" rel="stylesheet" />
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!--FONTAWESOME-->
+    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-search-pseudo-elements></script>
+
     <style>
         body {
             background-image: url("img/login-bg.png");
+            font-family: 'Poppins', sans-serif !important
         }
         
         form {
@@ -94,7 +102,7 @@
                     <div class="imgcontainer">
                         <br>
                         <!-- <img src="img_avatar2.png" alt="Avatar" class="avatar"> -->
-                        <h2 id="red">Masuk ke akun</h2>
+                        <h2 id="red" style=" font-family: 'Poppins', sans-serif !important">Masuk ke akun</h2>
 
                         <br>
                     </div>
