--- a/detailtiket.html
+++ b/detailtiket.html
@@ -31,27 +31,6 @@
 
 <!--ISI-->
   <body>
-    <header>
-        <div class="navbar navbar-expand-sm bg-light navbar-light fixed-top" id="navbarHeader">
-            <div class="container d-flex justify-content-between">
-             
-                    <a id="red" class="navbar-brand"><img src="/img/icon.png" alt="logo" style="width:40px;"> <b>TariNika</b></a>
-                    <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Bantuan</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Daftar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-danger" href="/login.html">Login</a>
-                    </li>
-                    </ul>
-
-            </div>
-        </div>
-      </header>
-  
       <main role="main">
   
         <section class="jumbotron bg-danger text-light text-center" style="
@@ -62,8 +41,8 @@
             <p class="lead text-light">Dapatkan tiketmu dan lestarikan tari indonesia!</p>
             <p>
               <!--SEARCH BAR-->
-              <div class="row">
-                <div class="col-sm-12 card-margin">
+              <div class="row ">
+                <div class="col-lg-12 card-margin">
                     <div class="card search-form">
                         <div class="card-body p-0">
                             <form id="search-form">
@@ -182,7 +161,7 @@
             <h4>Tanggal:</h4>
             From
             <div class="form-group row">
-              <div class="col-md-10">
+              <div class="col-10">
                 <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
               </div>
             </div>
@@ -399,7 +378,7 @@
           <p class="fs-4 float-right text-center pt-3">
             <a class="text-light nav-link" href="#">Kembali Ke Atas</a>
           </p>
-          <p class="text">Prototipe Tugas RBPL | Oleh kelompok 1 RBPL Kelas B</p>
+          <p class="text-center">Prototipe Tugas RBPL | Oleh kelompok 1 RBPL Kelas B</p>
         </div>
       </footer>
 
