--- a/pembayaran.html
+++ b/pembayaran.html
@@ -146,7 +146,7 @@
             <div class="row">
                 <div class="col-sm-1"></div>
                 <!-- bagian kiri -->
-                <div class="col-sm-6" style="border: 3px solid #f1f1f1; border-radius: 20px; background-color: white; text-align: center;margin-top: 35px; padding: 30px; margin-bottom: 20px;">
+                <div class="col-sm-6 shadow" style="border: 3px solid #f1f1f1; border-radius: 20px; background-color: white; text-align: center;margin-top: 35px; padding: 30px; margin-bottom: 20px;">
                     <h4 style="text-align: left;"><b>Virtual Account</b></h4>
                     <br><br>
                     <!-- bank BCA -->
@@ -158,7 +158,7 @@
                         <div class="col-sm-3">
                             <img src="img/bca-syr.jpg" alt="bca-logo" width="110%" style="border-radius: 10px;">
                         </div>
-                        <div class="col-sm-1" style="margin-top: 15px;">
+                        <div class="col-sm-1" style="margin-top: 20px;">
                             <img src="img/go.png" alt="bca-logo" width="60%">
                         </div>
                     </div>
@@ -171,7 +171,7 @@
                         <div class="col-sm-3">
                             <img src="img/bcasyr.png" alt="bca-logo" width="110%">
                         </div>
-                        <div class="col-sm-1" style="margin-top: 15px;">
+                        <div class="col-sm-1" style="margin-top: 20px;">
                             <img src="img/go.png" alt="bca-logo" width="60%">
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                         <div class="col-sm-3">
                             <img src="img/bni.png" alt="bca-logo" width="110%">
                         </div>
-                        <div class="col-sm-1" style="margin-top: 15px;">
+                        <div class="col-sm-1" style="margin-top: 20px;">
                             <img src="img/go.png" alt="bca-logo" width="60%">
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                         <div class="col-sm-3">
                             <img src="img/bri.jpg" alt="bca-logo" width="110%">
                         </div>
-                        <div class="col-sm-1" style="margin-top: 15px;">
+                        <div class="col-sm-1" style="margin-top: 20px;">
                             <img src="img/go.png" alt="bca-logo" width="60%">
                         </div>
                     </div>
@@ -210,8 +210,8 @@
                         <div class="col-sm-3">
                             <img src="img/mandiri.png" alt="bca-logo" width="110%" style="border-radius: 10px;">
                         </div>
-                        <div class="col-sm-1" style="margin-top: 15px;">
-                            <img src="img/go.png" alt="bca-logo" width="60%">
+                        <div class="col-sm-1" style="margin-top: 20px;">
+                            <img src="img/go.png" alt="next" width="60%">
                         </div>
                     </div>
 
@@ -219,8 +219,29 @@
 
                     <!-- bagian kanan -->
                 </div>
-                <div class=" col-sm-4 " style="border: 3px solid #f1f1f1; border-radius: 20px; background-color: white; text-align: center;margin-top: 35px; margin-left: 30px; padding: 30px; margin-bottom: 15px;">
-                    <h2>Ini isinya pesanan yaa</h2>
+                <div class=" col-sm-4 shadow" style=" height: 80%; border: 3px solid #f1f1f1; border-radius: 20px; background-color: white; text-align: center;margin-top: 35px; margin-left: 30px; padding: 30px; margin-bottom: 15px;">
+                    <h4 style="text-align: left;"><b>Detail Pesanan</b></h4>
+                    <br><br>
+                    <img src="img/tiket-pembayaran.png" alt="tiket" width="100%">
+                    <br><br>
+                    <h3 class="fw-bold" style="text-align: left; font-size: 17pt;">Pertunjukan Tari Kecak</h3>
+                    <p style="color: crimson; text-align: left;">Show 15 Juli 2021</p>
+                    <p style="color: grey; text-align: left;"> Sanggar Sanur, Bali</p>
+                    <div class="row">
+                        <div class="col-sm-8">
+                            <h4 style="text-align: left; font-size: 17pt">Rp 60.000</h4>
+                        </div>
+                        <div class="col-sm-4">
+                            <h5 style="font-size: 12pt">x 2</h5>
+                        </div>
+                    </div>
+                    <br><br><br>
+
+                    <h3 style="text-align: right; font-size: 15pt; font-weight: 600;">Total Pembayaran</h3>
+                    <!-- <div style=" border: 2px solid #f1f1f1; border-radius: 20px; background-color: whitesmoke; text-align: center; padding: 7px; margin-bottom: 10px;">
+                        <h4 style="font-weight: 600;">Rp. 120.000</h4>
+                    </div> -->
+                    <h4 style="font-weight: 650; text-align: right; font-size: 17pt; margin-top: 5px; color: crimson;">Rp. 120.000</h4>
                 </div>
                 <div class="col-sm-1 "></div>
             </div>
