--- a/pembayaran-va.html
+++ b/pembayaran-va.html
@@ -206,15 +206,15 @@
                         <p style="text-align: left; font-weight: 500; font-size: 15pt;">Cara Pembayaran</p>
                         <button type="button" class="collapsible" style="background-color: whitesmoke; color: black;">ATM</button>
                         <div class="content" style="border-radius: 20px; padding: 15px; background-color: white; margin-bottom: 7px;">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <button type="button" class="collapsible" style="background-color: whitesmoke; color: black;">Mobile Banking</button>
                         <div class="content" style="border-radius: 20px; padding: 15px; background-color: white; margin-bottom: 7px;">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
                         <button type="button" class="collapsible" style="background-color: whitesmoke; color: black;">Internet Banking</button>
                         <div class="content" style="border-radius: 20px; padding: 15px; background-color: white; margin-bottom: 7px;">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <p style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                         </div>
 
                         <script>
