--- a/login.html
+++ b/login.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Form</title>
+    <title>Masuk ke Akun</title>
+    <!--FAVICON-->
+    <link rel="icon" href="/img/icon.png" type="image/png" sizes="16x16">
     <!--CSS STYLE-->
     <link href="css/styles.css" rel="stylesheet" />
     <!-- font -->
