halaman pesan tiket
bismillah tp ini hardcode gpp dulu kali ya lofu

--- a/detailtiket.html
+++ b/detailtiket.html
@@ -208,7 +208,7 @@
                             <small class="text-success">Tiket tersedia</small>
                           </div>
                           <br>
-                          <button type="button" class="col-md-11 btn btn-danger btn-lg rounded-16 mb-3">Pesan Tiket</button>
+                          <a href="/pesantiket.html"><button type="button" class="col-md-11 btn btn-danger btn-lg rounded-16 mb-3">Pesan Tiket</button></a>
                         </div>
                      <!--end of Pilihan Tiket-->
 
@@ -221,7 +221,7 @@
                         <small class="text-success">Tiket tersedia</small>
                       </div>
                       <br>
-                      <button type="button" class="col-md-11 btn btn-danger btn-lg rounded-16 mb-3">Pesan Tiket</button>
+                      <a href="/pesantiket.html"><button type="button" class="col-md-11 btn btn-danger btn-lg rounded-16 mb-3">Pesan Tiket</button></a>
                     </div>
                  <!--end of Pilihan Tiket-->
                  <!--Pilihan Tiket-->
@@ -233,7 +233,7 @@
                     <small class="text-success">Tiket tersedia</small>
                   </div>
                   <br>
-                  <button type="button" class="col-md-11 btn btn-danger btn-lg rounded-16 mb-3">Pesan Tiket</button>
+                  <a href="/pesantiket.html"><button type="button" class="col-md-11 btn btn-danger btn-lg rounded-16 mb-3">Pesan Tiket</button></a>
                 </div>
              <!--end of Pilihan Tiket-->
                   </div>
