nyambungin semua halaman
bismillah

--- a/daftar.html
+++ b/daftar.html
@@ -199,7 +199,7 @@
                         <br>
                         <button type="submit" class="btn btn-danger">Daftar</button>
                         <br>
-                        <button type="button" class="btn btn-danger" style="  background-color: white; color: #FF473E; padding: 14px 20px; margin: 8px 0; cursor: pointer; width: 40%; border-radius: 20px;">Masuk</button>
+                        <a href="/login.html"><button type="button" class="btn btn-danger" style="  background-color: white; color: #FF473E; padding: 14px 20px; margin: 8px 0; cursor: pointer; width: 40%; border-radius: 20px;">Masuk</button></a>
                         <br>
                         <br><br>
                     </div>
