--- a/login.html
+++ b/login.html
@@ -121,7 +121,7 @@
                         <br>
                         <button type="submit" class="btn btn-danger">Masuk</button>
                         <br>
-                        <button type="button" class="btn btn-danger" style="  background-color: white; color: #FF473E; padding: 14px 20px; margin: 8px 0; cursor: pointer; width: 40%; border-radius: 20px;">Daftar</button>
+                        <a href="/daftar.html"><button type="button" class="btn btn-danger" style="  background-color: white; color: #FF473E; padding: 14px 20px; margin: 8px 0; cursor: pointer; width: 40%; border-radius: 20px;">Daftar</button></a>
                         <br>
                         <br><br>
                     </div>
