--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#">Bantuan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Daftar</a>
+                        <a class="nav-link" href="/daftar.html">Daftar</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-danger" href="/login.html">Login</a>
