--- a/pembayaran.html
+++ b/pembayaran.html
@@ -118,27 +118,29 @@
 </head>
 
 <body class="image1">
-    <!--  <header>
-        <div class="navbar navbar-expand-sm bg-light navbar-light fixed-top" id="navbarHeader">
+      <!--NAVBAR-->
+      <header>
+        <div class="navbar navbar-expand-sm bg-light navbar-light fixed-top  shadow-sm rounded-bottom" id="navbarHeader">
             <div class="container d-flex justify-content-between">
-
-                <a id="red" class="navbar-brand"><img src="/img/icon.png" alt="logo" style="width:40px;"> <b>TariNika</b></a>
-                <ul class="navbar-nav ml-auto">
+             
+                    <a id="red" class="navbar-brand" href="/index.html"><img src="/img/icon.png" alt="logo" style="width:40px;"> <b>TariNika</b></a>
+                    <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tentang</a>
+                        <a class="nav-link" href="#">Bantuan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Daftar</a>
+                        <a class="nav-link" href="/daftar.html">Daftar</a>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-danger" href="/login.html">Login</a>
                     </li>
-                </ul>
+                    </ul>
 
             </div>
         </div>
-    </header>
--->
+      </header>
+    <!--END NAVBAR-->
+
 
     <main>
         <!-- <br><br><br><br> -->
@@ -152,6 +154,7 @@
                     <h4 style="text-align: left;"><b>Virtual Account</b></h4>
                     <br><br>
                     <!-- bank BCA -->
+                    <a style="text-decoration: none;" class="text-dark" href="/pembayaran-va.html">
                     <div class="row" style="border: 2px solid #f1f1f1; border-radius: 20px; background-color: white; text-align: center; padding: 20px; margin-bottom: 15px;">
                         <div class="col-sm-8">
                             <h5 style="text-align: left; font-weight: 500; font-size: 18pt;">BCA</h5>
@@ -164,6 +167,7 @@
                             <img src="img/go.png" alt="bca-logo" width="60%">
                         </div>
                     </div>
+                </a>
                     <!-- bank BCA Syariah-->
                     <div class="row" style="border: 2px solid #f1f1f1; border-radius: 20px; background-color: white; text-align: center; padding: 20px; margin-bottom: 15px;">
                         <div class="col-sm-8">
