--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     <div class="col-12">
                                         <div class="row no-gutters">
                                             <div class=" bg-light col-lg-3 col-md-3 col-sm-12 p-0 shadow-sm">
-                                                <select class="form-control" id="exampleFormControlSelect1">
+                                                <select class="form-select" id="exampleFormControlSelect1">
                                                   <option>Semua</option>  
                                                   <option >Nama Tari</option>
                                                   <option>Lokasi Pertunjukan</option>
@@ -117,7 +117,7 @@
                                             <div class="result-actions">
                                                 <div class="result-sorting text-danger">
                                                     <p>Urutkan berdasar:</p>
-                                                    <select class="form-control border-0" id="exampleOption">
+                                                    <select class="form-select border-0" id="exampleOption">
                                                         <option value="1">Paling sesuai</option>
                                                         <option value="2">Nama (A-Z)</option>
                                                         <option value="3">Nama (Z-A)</option>
