--- a/pembayaran.html
+++ b/pembayaran.html
@@ -230,12 +230,12 @@
                     <br><br>
                     <img src="img/tiket-pembayaran.png" alt="tiket" width="100%">
                     <br><br>
-                    <h3 class="fw-bold" style="text-align: left; font-size: 17pt;">Pertunjukan Tari Kecak</h3>
-                    <p style="color: crimson; text-align: left;">Show 15 Juli 2021</p>
-                    <p style="color: grey; text-align: left;"> Sanggar Sanur, Bali</p>
+                    <h3 class="fw-bold" style="text-align: left; font-size: 17pt;">Pertunjukan Tari Saman</h3>
+                    <p style="color: crimson; text-align: left;">Show 15 Juni 2021</p>
+                    <p style="color: grey; text-align: left;"> Gedung kesenian TMII, Jakarta Pusat</p>
                     <div class="row">
                         <div class="col-sm-8">
-                            <h4 style="text-align: left; font-size: 17pt">Rp 60.000</h4>
+                            <h4 style="text-align: left; font-size: 17pt">Rp 80.000</h4>
                         </div>
                         <div class="col-sm-4">
                             <h5 style="font-size: 12pt">x 2</h5>
@@ -244,7 +244,7 @@
                     <br><br><br>
 
                     <h3 style="text-align: right; font-size: 15pt; font-weight: 600;">Total Pembayaran</h3>
-                    <h4 style="font-weight: 650; text-align: right; font-size: 17pt; margin-top: 5px; color: crimson;">Rp. 120.000</h4>
+                    <h4 style="font-weight: 650; text-align: right; font-size: 17pt; margin-top: 5px; color: crimson;">Rp. 160.000</h4>
                 </div>
                 <div class="col-sm-1 "></div>
             </div>
