--- a/pesantiket.html
+++ b/pesantiket.html
@@ -74,12 +74,12 @@
                         </div>
                         <div class="col-md-8">
                             <h4><b>Tiket A</b></h4>
-                            <p>All Access</p>
+                            <p class="text-danger">All Access</p>
                             <p>Free Snack & Drink</p>
                             <p>Show 15 Juni 2021</p>
                             <br>
-                            <p>Harga satuan</p>
-                            <div class="product-price"><h5 class="">Rp 100.000</h5></div>
+                            <p class="text-danger">Harga satuan</p>
+                            <div class="product-price"><h5 class="">Rp 80.000</h5></div>
                         </div>
                     </div>
                     <!--end of baris atas-->
@@ -98,8 +98,8 @@
                                 <br><br>
                                 </div>
                                  <p>Total Bayar</p>
-                                 <div style="display: none;" class="product-price"><h5 class="text-danger"><b>100.000</b></h5></div>
-                                 <div class="product-line-price"><h3 class="text-danger"><b>100.000</b></h3></div>
+                                 <div style="display: none;" class="product-price"><h5 class="text-danger"><b>80.000</b></h5></div>
+                                 <div class="product-line-price"><h3 class="text-danger"><b>80.000</b></h3></div>
                         </div>
                         <!--end of buat nambahin jumlah pesanan-->
                     </div>   
