--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
         .image1 {
             width: 100%;
             height: 100%;
-            background-image: url(link gambar.jpg);
+            background-image: url(img/login-bg.png);
             background-size: cover;
             /* Agar tampilan gambar tetap proposional dengan ukuran layar */
             background-position: center;
