--- a/pembayaran-va.html
+++ b/pembayaran-va.html
@@ -102,6 +102,16 @@
         }
         /* Change styles for span and cancel button on extra small screens */
         
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            /* background-color: red; */
+            color: white;
+            text-align: center;
+        }
+        
         .image1 {
             width: 100%;
             height: 100%;
@@ -264,6 +274,10 @@
             </div>
         </div>
     </main>
+
+    <div class="footer">
+        <a type="submit" class="btn shadow" style="width: 20%; background-color: crimson; color: white; border-radius: 20px; cursor: pointer; margin-bottom: 20px;" href="/statuspembayaran.html">lihat status pembayaran</a>
+    </div>
 </body>
 
 </html>
