--- a/pembayaran.html
+++ b/pembayaran.html
@@ -78,6 +78,16 @@
         }
         /* Change styles for span and cancel button on extra small screens */
         
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            /* background-color: red; */
+            color: white;
+            text-align: center;
+        }
+        
         .image1 {
             width: 100%;
             height: 100%;
@@ -247,6 +257,10 @@
                     <h4 style="font-weight: 650; text-align: right; font-size: 17pt; margin-top: 5px; color: crimson;">Rp. 160.000</h4>
                 </div>
                 <div class="col-sm-1 "></div>
+            </div>
+            <div class="footer">
+                <a type="submit" class="btn shadow" style="width: 20%; background-color: crimson; color: white; border-radius: 20px; cursor: pointer; margin-bottom: 20px;" href="/pesanan.html">lihat pesananku</a>
+                <!-- <button type="submit" class="btn shadow" style="width: 20%; background-color: crimson; color: white; border-radius: 20px; cursor: pointer; margin-bottom: 20px;">lihat pesananku</button> -->
             </div>
         </div>
     </main>
