--- a/detailtiket.html
+++ b/detailtiket.html
@@ -42,7 +42,7 @@
                       <a id="red" class="navbar-brand" href="/index.html"><img src="/img/icon.png" alt="logo" style="width:40px;"> <b>TariNika</b></a>
                       <ul class="navbar-nav ml-auto">
                       <li class="nav-item">
-                          <a class="nav-link" href="#">Bantuan</a>
+                        <a class="nav-link" href="/keranjang.html">Keranjang</a>
                       </li>
                       <li class="nav-item">
                           <a class="nav-link" href="/daftar.html">Daftar</a>
